--- a/sample.html
+++ b/sample.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="http://dev.inappbi.com/inappbi/styles/inappbi.css"/>
-    <script src="http://dev.inappbi.com/inappbi/scripts/inappbi.js"></script>
+    <link rel="stylesheet" href="https://lil.inappbi.com/inappbi/styles/inappbi.css"/>
+    <script src="http://lil.inappbi.com/inappbi/scripts/inappbi.js"></script>
 
     <style type="text/css">
         #wrapper {
@@ -175,7 +175,7 @@
 
     //Init EBIWrapper
     var inAppBIWrapper = new InAppBIWrapper({
-        apiEndPoint : 'http://dev.inappbi.com/inappbi',
+        apiEndPoint : 'https://lil.inappbi.com/inappbi',
         token : 'eyJhbGciOiJQQkVTMi1IUzI1NitBMTI4S1ciLCJlbmMiOiJBMTI4Q0JDLUhTMjU2IiwicDJjIjo4MTkyLCJwMnMiOiJEQUgzLURQVXNmWlBTN1hEIn0.3j0_DsWdgrQuT95553V8tQMbd6ZZdpVDq56kkN45dK7BGBCCpGOS_w.hCzI-SYT2vvci5UYBDCLPw.iFgtfoo7l9yGGTbafOTNpANxFXq1qFfERsvXE6-Z3o1y0FY1pWVCKhpNCdNZQu5bB_vQz-hXWl2nQc8UW0wUTm07LQxQ3OKYxeYE9RrvxiVqD_E9JxosCsd36DVI-wTOq54S3O1Hn9kSPDAwMzZbPw.f2KxbFaCyEIF_jqW_3tiLg'
     });
 
