--- a/sample.html
+++ b/sample.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://lil.inappbi.com/inappbi/styles/inappbi.css"/>
-    <script src="http://lil.inappbi.com/inappbi/scripts/inappbi.js"></script>
+    <script src="https://lil.inappbi.com/inappbi/scripts/inappbi.js"></script>
 
     <style type="text/css">
         #wrapper {
