--- a/sample.html
+++ b/sample.html
@@ -223,7 +223,7 @@
     function showAdhocEditor(id){
         console.log(id);
         $('#page-content-wrapper').hide();
-        var url = '/#/app/adhoceditor/'+id+'//true';
+        var url = 'https://lil.inappbi.com/inappbi/#/app/adhoceditor/'+id+'//true';
         $('#adhocEditor').show();
         $('#adhocEditorFrame').attr('src', url)
     }
